# sharky-bot

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  bot_structure.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-docker.yml
src/plugins/crowd_count/: __init__.py  utils.py
